# veeam-spc

./: README.md  fix_openapi_yaml.py  fix_response_keys.py  pyproject.toml  setup.py
.github/workflows/: publish-on-release.yml  publish-to-testpypi.yml
tests/: test_v3_5_1_about.py
veeam_spc/: README.md  __init__.py  __version__.py  client.py  pyproject.toml
veeam_spc/v3_5_1/models/: __init__.py  add_api_key_login_response_200.py  add_existing_public_cloud_azure_appliance_response_200.py  attach_request_data_to_async_action_response_200.py  authentication_result.py  backup_agent_assigned_backup_policy.py  backup_agent_job.py  backup_server_backup_job_schedule_monthly_type_0.py  backup_server_job.py  company_hosted_vbr_backup_resource.py  company_input.py  company_site_backup_resource.py  company_site_backup_resource_usage.py  company_site_replication_resource_vcd_network_appliance.py  company_site_resource.py  company_site_vcd_replication_resource_data_center.py  complete_reset_password_request_response_200.py  complete_smtp_o_auth_2_sign_in_response_200.py  copy_backup_policy_response_200.py  copy_pulse_license_response_200.py  create_azure_device_code_response_200.py  create_backup_server_backup_vm_v_sphere_job_response_200.py  create_backup_server_backup_vm_vcd_job_response_200.py  create_backup_server_linux_credentials_response_200.py  create_backup_server_multipart_patch_response_200.py  create_backup_server_standard_credentials_response_200.py  create_company_hosted_vbr_backup_resource_response_200.py  create_company_response_200.py  (+417 more)
(+418 files in other folders)
